--- a/WebContent/a.xhtml
+++ b/WebContent/a.xhtml
@@ -21,6 +21,9 @@
 		
 		Foreground color: <h:inputText value="#{colorPrefs.foreground}"/>
 		Background color: <h:inputText value="#{colorPrefs.background}"/>
+		
+		<br/><br/>
+		<a href="https://htmlcolorcodes.com/color-names/">Some possible color names</a>
 	</h:form>
 </div>
 
