--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -3,11 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-<title>Managed beans exercises #3</title>
+<title>Exercises for Managed beans III</title>
 <link href="./css/styles.css" rel="stylesheet" type="text/css"/> 
 </h:head>
 <h:body>
-<h1 class="title">Managed beans exercise #3</h1><br/>
-<a href="a.jsf">First exercise - color picker</a><br/>
-<a href="search-engines.jsf">Second exercise - search engines</a>
+<p><a href="http://www.coreservlets.com/JSF-Tutorial/jsf2/#Beans-3">Exercises for Managed Beans III</a></p>
+
+<a href="a.jsf">1. Color picker</a><br/>
+<a href="search-engines.jsf">2. Search engines</a>
 </h:body></html>
